# vespera

./: .gitignore  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  openapi.json  package.json
crates/vespera/: Cargo.toml
crates/vespera/src/: args.rs  collector.rs  file_utils.rs  inprocess.rs  jni.rs  lib.rs  method.rs  multipart.rs  openapi_generator.rs  parser.rs
crates/vespera/src/route/: utils.rs
crates/vespera_core/: Cargo.toml
crates/vespera_core/src/: openapi.rs  route.rs  schema.rs
crates/vespera_inprocess/: Cargo.toml
crates/vespera_inprocess/src/: lib.rs
crates/vespera_jni/: Cargo.toml
crates/vespera_jni/src/: lib.rs
crates/vespera_macro/: Cargo.toml
crates/vespera_macro/src/: args.rs  collector.rs  cron_impl.rs  file_utils.rs  lib.rs  metadata.rs  method.rs  multipart_impl.rs  openapi_generator.rs  parse_utils.rs  parser.rs  route_impl.rs  router_codegen.rs  schema_impl.rs  schema_macro.rs  vespera_impl.rs
crates/vespera_macro/src/parser/: is_keyword_type.rs  mod.rs  operation.rs  parameters.rs  path.rs  request_body.rs  response.rs  schema.rs
crates/vespera_macro/src/parser/schema/: enum_schema.rs  mod.rs  serde_attrs.rs  struct_schema.rs  type_schema.rs
crates/vespera_macro/src/parser/snapshots/: vespera_macro__parser__parameters__tests__parse_function_parameter_cases-10.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-11.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-12.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-12.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-14.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-17.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-18.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-18.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-19.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-19.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-2.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-4.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-4.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-5.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-5.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-6.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases-7.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases.snap.new  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_header_custom.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_path_single.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_path_tuple.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_path_tuple_destructure.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_query_struct.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_query_user.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_typed_header_and_arg.snap  vespera_macro__parser__parameters__tests__parse_function_parameter_cases@params_typed_header_multi.snap  vespera_macro__parser__request_body__tests__parse_request_body_cases@req_body_form.snap  vespera_macro__parser__request_body__tests__parse_request_body_cases@req_body_json.snap  vespera_macro__parser__request_body__tests__parse_request_body_cases@req_body_self_ref.snap  vespera_macro__parser__request_body__tests__parse_request_body_cases@req_body_str.snap  vespera_macro__parser__request_body__tests__parse_request_body_cases@req_body_typed_multipart.snap  vespera_macro__parser__schema__tests__parse_enum_to_schema_tuple_and_named_variants@tuple_named_named_object.snap  vespera_macro__parser__schema__tests__parse_enum_to_schema_tuple_and_named_variants@tuple_named_tuple_multi.snap  vespera_macro__parser__schema__tests__parse_enum_to_schema_tuple_and_named_variants@tuple_named_tuple_single.snap  vespera_macro__parser__schema__tests__parse_enum_to_schema_unit_variants@unit_simple.snap  vespera_macro__parser__schema__tests__parse_enum_to_schema_unit_variants@unit_simple_snake.snap  vespera_macro__parser__schema__tests__parse_enum_to_schema_unit_variants@unit_status.snap
crates/vespera_macro/src/route/: utils.rs
crates/vespera_macro/src/schema_macro/: circular.rs  codegen.rs  file_cache.rs  file_lookup.rs  from_model.rs  inline_types.rs  input.rs  mod.rs  seaorm.rs  tests.rs  transformation.rs  type_utils.rs  validation.rs
examples/axum-example/: Cargo.toml  openapi.json  vespertide.json
examples/axum-example/models/: comment.vespertide.json  config.vespertide.json  memo.vespertide.json  single.json  single_rel.json  user.vespertide.json  uuid_item.vespertide.json
examples/axum-example/src/: lib.rs  main.rs
examples/axum-example/src/models/: comment.rs  config.rs  memo.rs  memo_comment.rs  mod.rs  single.rs  single_rel.rs  user.rs  uuid_item.rs
examples/axum-example/src/routes/: config.rs  enums.rs  error.rs  flatten.rs  form.rs  generic.rs  health.rs  memos.rs  mod.rs  typed_form.rs  typed_header.rs  users.rs  uuid_items.rs
examples/axum-example/src/routes/foo/: mod.rs
examples/axum-example/tests/: integration_test.rs
examples/axum-example/tests/snapshots/: integration_test__openapi.snap  integration_test__openapi.snap.new
examples/rust-jni-demo/: Cargo.toml  README.md
examples/rust-jni-demo/java/: .project  build.gradle.kts  settings.gradle.kts
examples/rust-jni-demo/java/demo-app/: .project  build.gradle.kts
examples/rust-jni-demo/src/: lib.rs  main.rs
examples/rust-jni-demo/src/routes/: documents.rs  health.rs  mod.rs
(+159 files in other folders)
