[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.33"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/vespera"
readme = "README.md"

[workspace.dependencies]
vespera_core = { path = "crates/vespera_core", version = "0.1.33" }
vespera_macro = { path = "crates/vespera_macro", version = "0.1.33" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# cherry-picked nursery lints
collection_is_never_read = "warn"
option_if_let_else = "warn"
redundant_pub_crate = "warn"
use_self = "warn"
# noisy pedantic lints to allow
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
