[package]
name = "vespera"
version.workspace = true
edition.workspace = true
description = "A fully automated OpenAPI engine for Axum with zero-config route and schema discovery"
license.workspace = true
repository.workspace = true

[features]
default = ["dep:axum-extra", "axum-extra/typed-header", "axum-extra/form", "axum-extra/query", "axum-extra/multipart", "axum-extra/cookie"]

[dependencies]
vespera_core = { workspace = true }
vespera_macro = { workspace = true }
axum = "0.8"
axum-extra = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"] }
axum_typed_multipart = "0.16"
tempfile = "3"
serde_json = "1"
tower-layer = "0.3"
tower-service = "0.3"

[lints]
workspace = true
