[package]
name = "vespera"
version.workspace = true
edition.workspace = true
description = "A fully automated OpenAPI engine for Axum with zero-config route and schema discovery"
license.workspace = true
repository.workspace = true

[features]
default = ["axum-extra/typed-header", "axum-extra/form", "axum-extra/query", "axum-extra/multipart", "axum-extra/cookie"]
cron = ["dep:tokio-cron-scheduler", "dep:tokio"]
inprocess = ["dep:vespera_inprocess"]
jni = ["inprocess", "dep:vespera_jni"]

[dependencies]
vespera_core = { workspace = true }
vespera_macro = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12" }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
serde_json = "1"
tower-layer = "0.3"
tower-service = "0.3"
tokio-cron-scheduler = { version = "0.13", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
vespera_inprocess = { workspace = true, optional = true }
vespera_jni = { workspace = true, optional = true }

[lints]
workspace = true
