[package]
name = "vespera_core"
version = "0.1.15"
edition = "2024"
description = "Core types and utilities for Vespera"
license = "Apache-2.0"
repository = "https://github.com/dev-five-git/vespera"
readme = "../../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.26"