[package]
name = "vespera_core"
version.workspace = true
edition.workspace = true
description = "Core types and utilities for Vespera"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.26"

[lints]
workspace = true