[package]
name = "vespera_jni"
version.workspace = true
edition.workspace = true
description = "JNI bridge for vespera — call Rust axum apps from Java"
license.workspace = true
repository.workspace = true

[dependencies]
vespera_inprocess = { workspace = true }
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"

[lints]
workspace = true
