[package]
name = "vespera_macro"
version.workspace = true
edition.workspace = true
description = "Procedural macros for Vespera - automatic route discovery and OpenAPI generation"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
vespera_core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.26"
insta = "1.46"
tempfile = "3"
serial_test = "3"

[lints]
workspace = true
