[package]
name = "axum-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vespera = { path = "../../crates/vespera" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
vespera = { path = "../../crates/vespera" }

[dev-dependencies]
axum-test = "18.7"
insta = "1.46"

