[package]
name = "rust-jni-demo"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rust-jni-demo"
path = "src/main.rs"

[dependencies]
vespera = { path = "../../crates/vespera", features = ["jni"] }
axum = "0.8"
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
